2009-04-04  Ozkan Sezer <sezeroz@gmail.com>

	* d3d.h, d3d8.h, d3d9.h, dmplugin.h, dmusicc.h, dmusicf.h, dmusici.h:
	  Added the missing COM_NO_WINDOWS_H definition (wine git
	  6688acce7dbb00ceea4e755fe0f4a771a5520c24).
	* d3d8.h, d3d9.h: Added missing include directives (wine git
	  56f7209a949a1805d80ae0a59e093bbe2857677e).
	* d3d9types.h: Fix the value of D3DFVF_POSITION_MASK (wine git
	  d359a7813fe3d7acd8d3791fe63a4e44bb22ebb2).
	* d3d8types.h, d3d9types.h: Fix the D3DFMT_XXX constant declarations
	  (wine git d4ca34dd9bf98ea71226460092c7095847b97509).
	* d3d.h: Fix method calling macros for IDirect3DTexture (wine git
	  e169bb0a7f204ebe0f3053d824a1177bc1dedc65) and for 
	  IDirect3DViewport3_GetViewport (wine git 
	  7c8fa9c24f5d6d4e22dec148ffecefc9a4262a27).
	* d3dtypes.h: Change long to LONG for Win64 compatibility (wine git
	  3d94f5efc29b43c72e9574ca6c7ee88a69e28b73).
	* d3dx8core.h: Make C++ compatible (wine git 
	  91d3a794e8b756dbcb7047c77acf1a7f862627dd), remove some extraneous
	  #include directives (wine git 
	  7e34c708c1b3bdbb7d4921c1153403a8d8840b29) and fix 
	  D3DXAssembleShaderFromFileA/W prototypes (wine git
	  3d962e27ed69829645f3c8f99c17087f92d89e01).
	* d3d8types.h, d3d9types.h, d3dhal.h, d3dtypes.h, ddrawi.h, dinput.h:
	  Added the missing DUMMYUNIONNAME1 macro.
	* dplay.h, dplobby.h: Likewise.

2009-02-20  Kai Tietz  <kai.tietz@onevision.com>

	* dinput.h (DIK_...): Add additional keyboard scan codes provided
	by http://www.alrj.org/docs/hardware/keycode.txt

	PA/2619828
	a bunch of directx header fixes from the wine git repository:
	* ddraw.h, dinput.h: Added the missing COM_NO_WINDOWS_H definition
	  (wine git 6688acce7dbb00ceea4e755fe0f4a771a5520c24)
	* ddraw.h: Fix the name of DDSPD_IUNKNOWNPOINTER
	  (wine git 47b6392b44dca86b8c61daa902bd35e73cca5e2f)
	* ddraw.h: Define DD_OK to S_OK instead of 0. Add define for DD_FALSE.
	  (wine git fd4a8941032458a9b2870d0068e6fb020a9c9e0c)