@@ -1,3 +1,8 @@
+2009-04-05  Ozkan Sezer <sezeroz@gmail.com>
+
+	* d3d8types.h, d3d9types.h: Remove misspelled constants as they exist
+	  correctly spelled (wine git d476313a49c1b46eeef390c79cadd72cd3eb217d).
+
 2009-04-04  Ozkan Sezer <sezeroz@gmail.com>
 
 	* d3d.h, d3d8.h, d3d9.h, dmplugin.h, dmusicc.h, dmusicf.h, dmusici.h:
